--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@angular/platform-browser": "~10.2.0",
     "@angular/platform-browser-dynamic": "~10.2.0",
     "@angular/router": "~10.2.0",
+    "ngx-toastr": "^13.0.0",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^11.7.1",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
